# uml

./: Cargo.toml  Dockerfile  Taskfile.yml
uml-common/: Cargo.toml
uml-common/src/: camera.rs  canvas.rs  color.rs  document.rs  draw_context.rs  drawable.rs  id.rs  interaction.rs  lib.rs  prompt.rs  size.rs  stroke.rs
uml-common/src/elements/: class.rs  element.rs  info.rs  label.rs  mod.rs  rectangle.rs  text.rs
uml-server/: Cargo.toml  build.rs
uml-server/src/: client_handler.rs  id.rs  main.rs  serve.rs  state.rs
uml-server/static/: index.html  index.js  style.css  wasm
uml-test/: Cargo.toml
uml-test/src/: client.rs  diagram.rs  lib.rs  server.rs
uml-test/tests/: serialize.rs  synchronize.rs
uml-wasm/: Cargo.toml
uml-wasm/src/: camera.rs  dialog.rs  drag.rs  event.rs  html_canvas.rs  lib.rs  mouse_button.rs  state.rs  wsclient.rs
uml-wasm/src/event/: cursor_style.rs  event.rs  mod.rs  outcome.rs
uml-wasm/src/event/handler/: drag.rs  hover.rs  keypress.rs  mod.rs  websocket.rs
