[package]
name = "uml-server"
version = "0.1.0"
edition = "2024"

[dependencies]
uml-common = { path = "../uml-common" }
actix = "^0.13"
actix-web = "4"
actix-files = "0.6.6"
actix-ws = "0.3.0"
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["fs"] }
anyhow = "1.0.96"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
env_logger = "0.11.7"
log = "0.4.26"
include_dir = "0.7.4"
mime_guess = "2.0.5"
