[package]
name = "uml-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
uml-common = { path = "../uml-common" }
wasm-bindgen = "^0.2"
console_log = "1.0.0"
futures = "^0.3"
gloo = { version = "^0.11", features = ["timers"] }
log = "^0.4"
serde = "^1.0"
serde_json = "^1.0"
wasm-bindgen-futures = "^0.4"
web-time = "^1.1"
once_cell = "^1.21"

[dependencies.web-sys]
version = "0.3"
features = [
	'CanvasRenderingContext2d',
	'Document',
	'Element',
	'HtmlCollection',
	'Window',
	'KeyboardEvent',
	'WebSocket',
	'MouseEvent',
	'TextMetrics',
	'CssStyleDeclaration',
]

[lib]
crate-type = ["cdylib"]
